test/coder/error/bad-subscript.pt
using output;
var ints [1]: like 1;
put(ints[2]);
putln;
